完善help接口
